# wiregraph

./: .gitignore  LICENSE  README.md  sample.pcap
backend/: Cargo.toml
backend/src/: capture.rs  main.rs  models.rs  packet_store.rs  server.rs  topology.rs  web_ui.rs
frontend/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/: graph.ts  labels.ts  main.ts  overlay.ts  particles.ts  poller.ts  renderer.ts  types.ts
scripts/: demo.sh  run.sh
