[package]
name = "wiregraph-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["George Larson"]
description = "Network traffic capture and topology aggregation backend for wiregraph"
license = "MIT"

[dependencies]
netgrep = { git = "https://github.com/georgeglarson/netgrep.git" }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
